# obelix

./: .atom-build.yml  .clang_complete  .gcc-flags.json  .gitignore  .gitignore.swp  .gitmodules  .hgignore  CMakeLists.txt  LICENSE  Makefile.am  Manifesto.md  README.md  TODO.md  autogen.sh  compile_commands.json  config.h  config.h.in  configure.ac  doxygen.config  license.c  license.py  main.cpp  obelix.cbp  obelix.kdev4  obelix.layout  obelix.sublime-project  obelix.sublime-workspace  oblconfig.h.in  test.obl
jv80/: CMakeLists.txt
jv80/asm/: opcodes.py  pushfl.asm
jv80/bitmap/: 0.xbm  1.xbm  2.xbm  3.xbm  4.xbm  5.xbm  6.xbm  7.xbm  8.xbm  9.xbm  a.xbm  amp.xbm  at.xbm  b.xbm  bang.xbm  bitmaps.py  bquote.xbm  bslash.xbm  c.xbm  colon.xbm  comma.xbm  d.xbm  dash.xbm  dollar.xbm  dot.xbm  dquote.xbm  e.xbm  eq.xbm  euro.xbm  f.xbm  g.xbm  gt.xbm  h.xbm  hash.xbm  hat.xbm  i.xbm  j.xbm  k.xbm  l.xbm  lbrace.xbm  (+31 more)
src/: CMakeLists.txt  Makefile.am  array.c  array.h  core.c  core.h  data.c  datastack.c  dict.c  dict.h  expr.c  expr.h  file.c  grammar.c  instruction.c  lexer.c  list.c  list.h  namespace.c  obelix.c  object.c  parser.c  resolve.c  script.c  scriptparse.c  set.c  set.h  str.c  stringbuffer.c  tree.c  tree.h
src/ast/: CMakeLists.txt  Syntax.h  ast.c  ast_stmt.c  libast.h  parse_to_ast.c  serialize.c
src/core/: Arguments.cpp  Arguments.h  Boolean.cpp  CMakeLists.txt  Dictionary.cpp  Dictionary.h  Error.cpp  Error.h  Exception.cpp  FileBuffer.cpp  FileBuffer.h  Format.cpp  Format.h  Integer.cpp  Iterator.cpp  Iterator.h  List.cpp  List.h  Logging.cpp  Logging.h  NativeFunction.cpp  NativeFunction.h  Object.cpp  Object.h  Process.cpp  Process.h  Range.cpp  Range.h  Regex.cpp  Regex.h  Resolve.cpp  Resolve.h  ScopeGuard.h  String.cpp  StringBuffer.cpp  StringBuffer.h  StringUtil.cpp  StringUtil.h  Type.cpp  Type.h
src/cpu/: CMakeLists.txt  ComponentContainer.cpp  ComponentContainer.h  ConnectedComponent.cpp  ConnectedComponent.h  addressregister.cpp  addressregister.h  alu.cpp  alu.h  backplane.cpp  backplane.h  clock.cpp  clock.h  component.cpp  component.h  controller.cpp  controller.h  emu.cpp  emulator.cpp  emulator.h  harness.h  iochannel.cpp  iochannel.h  memory.cpp  memory.h  microcode.h  opcodes.h  register.cpp  register.h  registers.h  systembus.cpp  systembus.h
src/grammar/: CMakeLists.txt  grammar.c  grammar_action.c  grammar_element.c  grammar_variable.c  grammarparser.c  libgrammar.h  nonterminal.c  panoramix.c  rule.c  rule_entry.c
src/interp/: Arguments.cpp  Arguments.h  Boolean.cpp  BoundFunction.cpp  BoundFunction.h  Functions.cpp  Integer.cpp  Interpreter.cpp  Interpreter.h  Iterator.cpp  Iterator.h  List.cpp  List.h  NativeFunction.cpp  NativeFunction.h  Object.cpp  Object.h  Range.cpp  Range.h  Regex.cpp  Regex.h  String.cpp
src/ipc/: CMakeLists.txt  client.c  libipc.h  message.c  mountpoint.c  protocol.c  remote.c  server.c
src/json/: CMakeLists.txt  json.c  libjson.h
src/jv80/: CMakeLists.txt  dump_instructions.cpp
src/lexer/: BasicParser.cpp  BasicParser.h  CMakeLists.txt  CommentScanner.cpp  FileBuffer.cpp  FileBuffer.h  IdentifierScanner.cpp  KeywordScanner.cpp  Lexer.cpp  Lexer.h  NumberScanner.cpp  OblBuffer.cpp  OblBuffer.h  QStringScanner.cpp  StringBuffer.cpp  StringBuffer.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  WhitespaceScanner.cpp  comment.c  identifier.c  keyword.c  keywords.c  lexa.c  lexamain.c  lexer.c  lexercfg.c  liblexer.h  number.c  position.c  qstring.c  scanner.c  scannercfg.c  token.c  uri.c  whitespace.c
src/lib/: CMakeLists.txt  Makefile.am  any.c  application.c  arguments.c  array.c  core.c  data.c  datalist.c  datastack.c  dict.c  dictionary.c  exception.c  expr.c  file.c  float.c  fsentry.c  function.c  hash.c  heap.c  hierarchy.c  int.c  libcore.h  list.c  logging.c  method.c  mutex.c  name.c  nvp.c  pointer.c  range.c  re.c  regcomp.c  regex.c  regex_internal.h  regexec.c  resolve.c  set.c  socket.c  str.c  (+11 more)
src/net/: CMakeLists.txt  client.c  libnet.h  mountpoint.c  socket.c  uri.c  uriparser.c
src/obelix/: ARM64.cpp  ARM64.h  ARM64Context.cpp  ARM64Context.h  ARM64Intrinsics.cpp  ARM64Intrinsics.h  ARM64Materialize.cpp  Architecture.cpp  Architecture.h  BindTypes.cpp  BoundFunction.cpp  BoundFunction.h  BoundSyntaxNode.cpp  BoundSyntaxNode.h  CMakeLists.txt  Config.cpp  Config.h  Context.h  Execute.cpp  Execute.h  ExpressionType.cpp  ExpressionType.h  FoldConstants.cpp  Functions.cpp  Interpreter.cpp  Interpreter.h  Intrinsics.cpp  Intrinsics.h  Lower.cpp  MacOSX.cpp  MacOSX.h  MaterializedSyntaxNode.h  NativeFunction.cpp  NativeFunction.h  Operator.h  OutputJV80.cpp  OutputJV80.h  Parser.cpp  Parser.h  Processor.cpp  (+13 more)
src/oblasm/: AsmTest.cpp  Assembler.cpp  Assembler.h  AssemblyTypes.cpp  AssemblyTypes.h  Buffer.cpp  Buffer.h  Bytes.cpp  Bytes.h  CMakeLists.txt  Directive.cpp  Directive.h  Image.cpp  Image.h  Instruction.cpp  Instruction.h  Opcode.cpp  Opcode.h  Segment.cpp  Segment.h  String.cpp  String.h  main.cpp
src/parser/: CMakeLists.txt  Makefile.am  alex.c  boundmethod.c  bytecode.c  closure.c  datastack.c  generator.c  grammar.c  grammarparser.c  instruction.c  lexer.c  libparser.h  loader.c  namespace.c  native.c  object.c  panoramix.c  parser.c  parserlib.c  script.c  scriptparse.c  stacktrace.c  token.c  vm.c
src/regex/: CMakeLists.txt  config.h.in  regex.c
src/rt/: CMakeLists.txt  close.s  crt.h  cstr_to_str.s  cstrlen.s  enum.c  exit.s  fsize.c  fsize.s  io.c  main.c  memcpy.s  obelix.h  open.s  puthex.s  puti.s  puts.c  (+12 more)
test/: 00_expr.obl  00_main.obl  01_var_decl.obl  02_expr.obl  02_semicolons.obl  03_for_loop.obl  03_hello_world.obl  04_allocate.obl  05_expr.obl  06_while.obl  07_var.obl  08_decl.obl  09_func.obl  90_puthex.obl  91_putint.obl  Makefile.am  addition.json  addition.obl  argv.json  argv.obl  array.c  array.json  array.obl  assignment.obl  async.obl  break.json  break.obl  buffer.c  client.py  collections.c  collections.h  comprehension.obl  comprehension_where.obl  config_test  connect.obl  const.json  const.obl  core.c  database.obl  datetime.obl  (+169 more)
(+688 files in other folders)
